# raytracer-epitech

./: CMakeLists.txt  Makefile  README.md
config_files/: all_shapes.txt  ambiant_occ.txt  cone.txt  cone_test.txt  cylinder.txt  dragon.txt  fat_man.txt  italy.txt  mirrors.txt  obj_shadow.txt  piano_test.txt  planets.txt  reflection.txt  reflectionmini.txt  shear_test.txt  transparent.txt
documentation/: install.md  usage.md
documentation/images/: effect.ppm  face.ppm
final_outputs/: all_shapes_multiple_lights.ppm
include/: Client.hpp  DLClass.hpp  INode.hpp  Image.hpp  Maybe.hpp  RGB.hpp  Ray.hpp  Renderer.hpp  Server.hpp  TSQueue.hpp  parsing.hpp
include/math/: MatrixN.hpp  Point3D.hpp  Rectangle3D.hpp  Vector2D.hpp  Vector3D.hpp
include/utils/: getClosest.h  isBehind.h  mainMethods.hpp
pallet/: aap128.pal  endesga.pal  pallet.pal
src/cameras/: ACamera.cpp  ACamera.hpp  ICamera.hpp
src/cameras/base/: Camera.cpp  Camera.hpp
src/lights/: ALight.cpp  ALight.hpp  ILight.hpp
src/lights/directional/: DirectionalLight.cpp  DirectionalLight.hpp
src/lights/point/: PointLight.cpp  PointLight.hpp
src/main/: main.cpp
src/main/anti_aliasing/: Aliasing.cpp  Aliasing.hpp
src/main/parser/: NodeBuilder.cpp  NodeBuilder.hpp  NodeFactory.hpp
src/main/pixelization/: Pixelize.cpp  Pixelize.hpp
src/main/renderer/: Renderer.cpp
src/materials/: AMaterial.cpp  AMaterial.hpp  IMaterial.hpp  Phong.cpp  Phong.hpp
src/materials/basic/: BasicMaterial.cpp  BasicMaterial.hpp  createBasicMaterial.cpp
src/materials/chessboard/: ChessMaterial.cpp  ChessMaterial.hpp
src/materials/glass/: GlassMaterial.cpp  GlassMaterial.hpp
src/materials/perlin/: PerlinMaterial.cpp  PerlinMaterial.hpp
src/materials/super/: SuperMaterial.cpp  SuperMaterial.hpp  createSuperMaterial.cpp
src/materials/texture/: TextureMaterial.cpp  TextureMaterial.hpp
src/math/: Point3D.cpp  Rectangle3D.cpp  Vector2D.cpp  Vector3D.cpp
src/scenes/: AScene.cpp  AScene.hpp  IScene.hpp
src/scenes/base/: Scene.cpp  Scene.hpp  sceneCreate.cpp
src/shapes/: AShape.cpp  AShape.hpp  IShape.hpp
src/shapes/cone/: Cone.cpp  Cone.hpp
src/shapes/cylinder/: Cylinder.cpp  Cylinder.hpp
src/shapes/object/: ObjTriangle.cpp  ObjTriangle.hpp  Object.cpp  Object.hpp  loadObjMaterials.cpp  loadObjMaterials.h
src/shapes/plane/: Plane.cpp  Plane.hpp
src/shapes/skybox/: Skybox.cpp  Skybox.hpp
src/shapes/sphere/: Sphere.cpp  Sphere.hpp
src/shapes/triangle/: Triangle.cpp  Triangle.hpp  TriangleCreate.cpp
src/transformations/: ATransform.cpp  ATransform.hpp  ITransform.hpp
src/transformations/rotation/: Rotation.cpp  Rotation.hpp
src/transformations/scale/: Scale.cpp  Scale.hpp
src/transformations/shear/: Shear.cpp  Shear.hpp
src/transformations/translation/: Translation.cpp  Translation.hpp
src/utils/: ANode.cpp  ANode.hpp  getClosest.cpp  isBehind.cpp
